tests/packages/fixtures/package_validator/invalid_type_meta_package/src/pv_invalid_type_meta_package/__init__.py
from __future__ import annotations

from pydantic import BaseModel, PrivateAttr

from scistudio.core.types.base import DataObject


class InvalidMetaType(DataObject):
    class Meta(BaseModel):
        label: str = "invalid"
        _secret: str = PrivateAttr(default="not-serializable-contract")


def get_types() -> list[type]:
    return [InvalidMetaType]
